# Hipi

./: .gitignore  AGENTIC_AI_GUIDE.md  AUDIO_SETUP.md  AUDIO_TROUBLESHOOTING.md  DOCKER_INSTALLATION.md  FEATURES_SUMMARY.md  INSTALLATION.md  LOGGING.md  Makefile  PLUGIN_TELEMETRY_GUIDE.md  README.md  REMOTE_ACCESS.md  TTS_VOICE_IMPROVEMENTS.md  VOICE_LISTENING.md  VOICE_TESTING_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  test_remote.sh
docker/: Dockerfile  setup_terminal_user.sh  start_services.sh
docs/: ADDING_DOCUMENTATION.md  AUTOMATION.md  AUTOMATION_SCENES_SYSTEM.md  CALENDAR.md  CALENDAR_REMINDER_SYSTEM.md  CLI_TOOL.md  DEVELOPER_FEATURES.md  DEVELOPER_TOOLS.md  DEVICES.md  DEVICE_CONTROL_SYSTEM.md  ENERGY.md  ENERGY_MONITORING_SYSTEM.md  ENHANCED_VOICE_FEATURES.md  MAKING_ASSISTANT_NATURAL.md  MEDIA.md  MEDIA_CONTROL_SYSTEM.md  MODEL_PERFORMANCE_TRACKING.md  MULTI_USER_SYSTEM.md  NATURAL_ASSISTANT.md  NATURAL_ASSISTANT_FEATURES.md  NATURAL_FAMILY_ASSISTANT.md  NEW_FEATURES_PROPOSAL.md  POWER_USER_FEATURES.md  POWER_USER_TOOLS.md  QUICK_REFERENCE.md  README.md  REPOSITORY_STRUCTURE.md  SCENES.md  SEARCH_TOOL_README.md  TERMINAL_SECURITY.md  USERS.md  UX_ELEVATION_SUMMARY.md  UX_IMPROVEMENTS.md  VOICE_FEATURES.md  WEB_TERMINAL.md
docs/guides/: ASSISTANT_COMMANDS.md  BUILD.md  DOCKER_COMPOSE_NOTE.md  MICROPHONE_SETUP.md
examples/api/: README.md
examples/power_user/: advanced_automation.py  webhook_ifttt.py
home_assistant_platform/: __init__.py
home_assistant_platform/cli/: __init__.py  main.py
home_assistant_platform/config/: logging_config.py  settings.py
home_assistant_platform/core/: __init__.py  main.py
home_assistant_platform/marketplace/: __init__.py  database.py  downloader.py  payment.py  registry.py
home_assistant_platform/web/: __init__.py  app.py  streamlit_app.py  terminal_server.py
plugin_sdk/: README.md
plugin_sdk/docs/: api_reference.md  plugin_development.md
plugin_sdk/template/: Dockerfile  app.py  manifest.json
scripts/: plugin_create.sh  setup_github.sh  start.sh
tests/: __init__.py  test_api.py  test_settings.py
tests/integration/: test_api_basic.py  test_application.py  test_automation.py  (+11 more)
(+140 files in other folders)
